# cliente-servidor-distribuido

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  loader.sh
headers/filemanager/: filemanager.h
headers/multmatix/: multmatrix.h
include/filemanager/: filemanager_imp.h  filemanager_stub.h
include/multmatrix/: multmatrix_imp.h  multmatrix_stub.h
include/utils/: peticiones.h  serializacion.h  socket.h  tipos.h
kubernetes/: broker-deployment.yaml  broker-service.yaml  filemanager-deployment.yaml  filemanager-service.yaml  multmatrix-deployment.yaml  multmatrix-service.yaml
source/filemanager/: filemanager.cpp  fm_client.cpp  fm_server.cpp  main_fm.cpp
source/multmatix/: main_multMatrix.cpp  multmatrix.cpp
source/multmatrix/: main_multMatrix.cpp  mm_client.cpp  mm_server.cpp  multmatrix.cpp
source/utils/: broker.cpp  socket.cpp
